# bio-variant-prediction

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
article/: main.tex  references.bib
notebooks/: main.ipynb
src/bio_var_pred/data/: annotate.py  compress.py  download.py  parse.py
src/bio_var_pred/utils/: paths.py
src/data/: annotate.py  compress.py  download.py  parse.py
src/parsing/: clinvar.py
